--- a/index.html
+++ b/index.html
@@ -8,18 +8,23 @@
     <script defer src="index.js"></script>
 </head>
 <body>
+<nav>
+    <a href="#home">Home</a>
+    <a href="#about">About</a>
+    <a href="#contact">Contact</a>
+</nav>
     <div id ="main">
-        <h1>East coast weather</h1>
+        <h1>Forecast by H</h1>
         <div>
             <form id="searchForm">
                 <input type="text" id="searchInput" name="city" placeholder="Enter city name">
-                <button type="submit" id="searchButton">Search</button>
+                <button type="submit" id="searchButton">Search any city!</button>
             </form>
         </div>
    
         <div id="weatherContainer">
             <p id="temperature">Temperature: </p>
-            <p id="weatherDescription">Weather: </p>
+            <p id="weatherDescription">Forecast:</p>
         </div>
     </div>
 </body>
