--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
             <p id="temperature">Temperature: </p>
             <p id="weatherDescription">Forecast:</p>
         </div>
+       
     </div>
+    <div id="flex">
+        <img src="https://media1.giphy.com/media/77di5IQoTBRyGzDxgE/giphy.gif" alt="hurricane gif">
+
+    </div>
+    
 </body>
 </html>
